--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,6 +4,16 @@
   box-sizing: border-box;
 }
 
+html {
+  width: 100%;
+  overflow-x: hidden;
+}
+
+body {
+  width: 100%;
+  overflow-x: hidden;
+}
+
 ::-webkit-scrollbar {
   width: 10px;
   height: 10px;
